--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,80 +1,109 @@
 .experiencia {
-    display: grid;
     max-width: 1200px;
-    margin: 0 auto;
     padding: 40px 20px;
-    grid-template-columns: 1fr 2fr;
-    gap: 140px;
-}
-
-.experiencia .subtitulo {
-    color: #e0e0e0;
-}
-
-.empresas {
+    margin: 0 auto;
     display: grid;
-    position: relative;
-    padding: 20px;
-    grid-template-columns: 1fr 1fr;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-    margin-bottom: 30px;
-}
-
-.experiencia-conteudo p {
-    color: #525252;
+    grid-template-columns: 1fr 2fr;
+    gap: 100px;
+  }
+  
+  .experiencia .subtitulo {
+    color: #e0e0e0;
+  }
+  
+  .experiencia-texto {
     font-size: 1.5rem;
-    margin-bottom: 30px;
+    line-height: 1.33;
     max-width: 40ch;
-}
-
-.experiencia-conteudo strong {
+    margin-bottom: 60px;
+    color: #525252;
+  }
+  
+  .experiencia-texto strong {
     color: #141414;
-}
-
-.empresas-data {
-    position: absolute;
-    top: 20px;
-    left: -60px;
-}
-
-.empresas-conteudo {
+  }
+  
+  .empresa {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px 20px;
+    padding: 20px;
+    background: #f5f5f5;
+    margin-bottom: 20px;
+    border-radius: 4px;
     position: relative;
-    font-size: 1.12rem;
-    line-height: 1.1;
-    font-weight: bold;
-    margin-bottom: 0px;
-}
-
-.empresas::before {
-    content:" ";
+  }
+  
+  .empresa::before {
+    content: "";
     display: block;
     width: 4px;
     height: 20px;
-    background-image: linear-gradient(#B6F829, #67DD0A);
+    background: linear-gradient(#b6f829, #67dd0a);
     position: absolute;
     top: 20px;
     left: -4px;
-}
-
-.empresas p {
-    font-size: 0.9rem;
-    line-height: 1.5;
-}
-
-.habilidades {
+  }
+  
+  .empresa-ano {
+    position: absolute;
+    top: 22px;
+    left: -100px;
+    text-align: right;
+    width: 80px;
+    color: #525252;
+    font-size: 0.875rem;
+  }
+  
+  .empresa-titulo {
+    font-size: 1.125rem;
+    line-height: 1.1;
+    font-weight: bold;
+  }
+  
+  .empresa-texto {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    color: #525252;
+  }
+  
+  .empresa-habilidades {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
-    align-content: center;
-}
-
-.habilidades li {
-    background-color: #fff;
-    height: 30px;
-    padding: 0px 10px;
-    font-size: 0.87rem;
-    align-content: center;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
+    gap: 10px;
+    align-content: start;
+  }
+  
+  .empresa-habilidades li {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    border-radius: 4px;
+    background: #ffffff;
+    padding: 5px 10px;
+  }
+  
+  @media (max-width: 800px) {
+    .experiencia {
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+    .experiencia .subtitulo {
+      color: #141414;
+    }
+    .experiencia-texto {
+      font-size: 1.25rem;
+    }
+    .empresa-ano {
+      position: initial;
+      order: 1;
+      width: initial;
+      text-align: left;
+    }
+  }
+  
+  @media (max-width: 400px) {
+    .empresa {
+      grid-template-columns: 1fr;
+    }
+  }
+  
