--- a/css/header.css
+++ b/css/header.css
@@ -1,50 +1,37 @@
 .header {
-    display: flex;
+    max-width: 1200px;
     padding: 40px 20px;
     margin: 0 auto;
-    max-width: 1200px;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.header-menu {
+  }
+  
+  .header-menu {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    justify-content: end;
-}
-
-.header-menu a {
-    padding: 10px 20px;
-    font-size: 1.25rem;
+    justify-content: center;
+  }
+  
+  .header-menu a {
+    font-size: 1.125rem;
     line-height: 1.3;
+    padding: 10px 20px;
     text-decoration: none;
     color: #141414;
     display: block;
-}
-
-@media (max-width: 700px) {
+  }
+  
+  @media (max-width: 800px) {
     .header {
-        flex-direction: column;
-        gap: 20px;
+      flex-direction: column;
+      gap: 40px;
+      padding: 20px;
     }
-
-    .header {
-        padding: 20px;
+    .header a {
+      background: #f5f5f5;
+      border-radius: 4px;
     }
-
-    .header-menu a {
-        background-color: #f5f5f5;
-        border-radius: 4px;
-    }
-}
-
-@media (max-width: 500px) {
-    .header-menu {
-        justify-content: center;
-    }
-
-    .header-menu a {
-        font-size: 1rem;
-    }
-}
+  }
+  
