--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-@import '/css/global.css';
-@import '/css/header.css';
-@import url(/css/introducao.css);
-@import url(/css/experiencia.css);
+@import "./global.css";
+@import "./header.css";
+@import "./introducao.css";
+@import "./experiencia.css";
+@import "./formação.css";
+@import "./footer.css";
